parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-string-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "r\"\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "r\"\"",
        ),
        start: 0,
        end: 3,
    },
]
