parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__raw-string-literals-6.snap
---
source: parser/src/lexer/mod.rs
description: "r'''hello'''"
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "r'''hello'''",
        ),
        start: 0,
        end: 12,
    },
]
