parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@annotated_assignment.py-5.snap
---
source: parser/src/lexer/mod.rs
description: "e: tuple[int, int]"
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "e",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Colon,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Identifier,
        value: Str(
            "tuple",
        ),
        start: 3,
        end: 8,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "int",
        ),
        start: 9,
        end: 12,
    },
    Token {
        kind: Comma,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "int",
        ),
        start: 14,
        end: 17,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 17,
        end: 18,
    },
]
