parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@annotated_assignment.py-7.snap
---
source: parser/src/lexer/lexer.rs
description: "g: tuple[int,\n         int] = 1, 2"
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
[
    Token {
        kind: Identifier,
        value: Str(
            "g",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Colon,
        value: None,
        start: 1,
        end: 2,
    },
    Token {
        kind: Identifier,
        value: Str(
            "tuple",
        ),
        start: 3,
        end: 8,
    },
    Token {
        kind: LeftBrace,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "int",
        ),
        start: 9,
        end: 12,
    },
    Token {
        kind: Comma,
        value: None,
        start: 12,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "int",
        ),
        start: 23,
        end: 26,
    },
    Token {
        kind: RightBrace,
        value: None,
        start: 26,
        end: 27,
    },
    Token {
        kind: Assign,
        value: None,
        start: 28,
        end: 29,
    },
    Token {
        kind: Integer,
        value: Number(
            "1",
        ),
        start: 30,
        end: 31,
    },
    Token {
        kind: Comma,
        value: None,
        start: 31,
        end: 32,
    },
    Token {
        kind: Integer,
        value: Number(
            "2",
        ),
        start: 33,
        end: 34,
    },
]
